Add post words * add click event to break down button * add post string functions * style components

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -37,7 +37,7 @@ main {
     margin-right: 20px;
     height: 100vh;
     h2 {
-      margin-bottom: 10px;
+      margin: 30px 0;
         color: $indigo;
       span {
       color: $salmon;
